--- a/stylesheets/layout_1px.scss
+++ b/stylesheets/layout_1px.scss
@@ -6,6 +6,10 @@
   }
 }
 
+header {
+  @include clearfix;
+}
+
 .logo, nav { 
   @include span-columns(6); 
 }
@@ -72,6 +76,27 @@ h1, h2 {
 
 .timeline {
   @include span-columns(4);
+}
+
+input[type="email"] {
+  font-family: $font; 
+  font-size: modular-scale(1);
+  display: block;
+  margin: 0;
+  padding-top: 8px;
+  box-shadow: none;
+  border-radius: none;
+  margin-top:4px;
+  margin-left: 30px;
+  margin-right: auto;
+  width: 200px;
+  float: left;
+}
+
+.short-button {
+  padding: 6.5px 30px;
+  margin-right: auto;
+  margin-left: -60px;
 }
 
 footer {
